--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
   "short_name": "Điểm Danh",
   "name": "Điểm Danh Thiếu Nhi",
-  "start_url": "/0902/index.html",
+  "start_url": "/diemdanh/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#007bff",
   "icons": [
     {
-      "src": "/0902/images/logo.jpg",
+      "src": "/diemdanh/images/logo.jpg",
       "sizes": "192x192",
       "type": "image/jpeg"
     },
     {
-      "src": "/0902/images/logo.jpg",
+      "src": "/diemdanh/images/logo.jpg",
       "sizes": "512x512",
       "type": "image/jpeg"
     }
